added My Artists and UpcomingEvents Routes

--- a/yolo-octo-bear/app/index.html
+++ b/yolo-octo-bear/app/index.html
@@ -26,6 +26,8 @@
         <ul class="nav nav-pills pull-right">
           <li class="active"><a ng-href="#">Home</a></li>
           <li><a ng-href="#/about">About</a></li>
+          <li><a ng-href="#/artists">My Artists</a></li>
+          <li><a ng-href="#/upcomingevents">Upcoming Events</a></li>
           <li><a ng-href="#">Contact</a></li>
           <li><a id="modal_trigger" href="#modal">Login</a></li>
         </ul>
@@ -138,6 +140,9 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/artist.js"></script>
+        <script src="scripts/controllers/artists.js"></script>
+        <script src="scripts/controllers/upcomingevents.js"></script>
         <!-- endbuild -->
 </body>
 </html>
