--- a/yolo-octo-bear/app/index.html
+++ b/yolo-octo-bear/app/index.html
@@ -95,7 +95,7 @@
       <div ng-view=""></div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span> Made by UF students</p>
       </div>
     </div>
 
