--- a/yolo-octo-bear/app/index.html
+++ b/yolo-octo-bear/app/index.html
@@ -25,7 +25,7 @@
       <div class="header">
         <ul class="nav nav-pills pull-right">
           <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
+          <li ng-class="{ active: isActive('/artists') }"><a ng-href="#/about">About</a></li>
           <li><a ng-href="#/artists">My Artists</a></li>
           <li><a ng-href="#/upcomingevents">Upcoming Events</a></li>
           <li><a ng-href="#">Contact</a></li>
@@ -143,6 +143,7 @@
         <script src="scripts/controllers/artist.js"></script>
         <script src="scripts/controllers/artists.js"></script>
         <script src="scripts/controllers/upcomingevents.js"></script>
+        <script src="scripts/directives/section.js"></script>
         <!-- endbuild -->
 </body>
 </html>
